fix added apis and all

--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_USE_TLS=false
 MAIL_TO_ADDRESS="hello@example.com"
+
+MONGODB_URI="mongodb+srv://nishantgangwar0581:Isha@1807@cluster0.m9ksg.mongodb.net/sample_mflix?retryWrites=true&w=majority&appName=Cluster0"
