--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@react-google-maps/api": "2.19.2",
     "bootstrap": "5.3.2",
     "bootstrap-icons": "1.11.1",
+    "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
-    "next": "14.0.0",
+    "mongodb": "^6.9.0",
+    "next": "^14.2.10",
+    "next-export-optimize-images": "^4.5.0",
     "nodemailer": "6.9.7",
     "react": "18",
     "react-dom": "18",
